Wed Nov  9 10:20:05 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * performance-tests/CSD_Strategy/TestInf/csd_pt_testinf.mpc:
          
          Removed duplicated dependency on pi and codecfactory and removed
          dependency on interceptors since it's not needed and it makes the 
          test library not built on minumum corba build.

Wed Nov  9 14:57:54 2005  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_2289_Regression/Bug_2289_Regression.mpc:
        * tests/Bug_2289_Regression/MyInterfaceImpl.cpp:
        * tests/Bug_2289_Regression/MyInterfaceImpl.h:
        * tests/Bug_2289_Regression/README:
        * tests/Bug_2289_Regression/Test.idl:
        * tests/Bug_2289_Regression/client.cpp:

          Updated this test so it doesn't need handcrafted code.

        * tests/Bug_2289_Regression/MyStruct.idl:
        * tests/Bug_2289_Regression/MyStructC.cpp:
        * tests/Bug_2289_Regression/MyStructC.h:
        * tests/Bug_2289_Regression/MyStructC.inl:
        * tests/Bug_2289_Regression/MyStructS.cpp:
        * tests/Bug_2289_Regression/MyStructS.h:
        * tests/Bug_2289_Regression/MyStructS.inl:
        * tests/Bug_2289_Regression/MyStructS_T.cpp:
        * tests/Bug_2289_Regression/MyStructS_T.h:
        * tests/Bug_2289_Regression/MyStructS_T.inl:

          Removed these files. They are no longer needed.

Wed Nov  9 14:25:41 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/constants.idl:

          Reverted the change of

          Tue Nov  8 20:11:47 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

          since that constant value is being used to address an Intel compiler
          bug, and the value itself is a legal one. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for pointing this out.

Tue Nov  8 20:11:47 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/constants.idl:

          Changed the literal rhs for one of the constants